// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoryTypeIcon component rendering it should get rendered correctly 1`] = `
<RepositoryTypeIcon
  id={123}
  type="unknown-type"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Tooltip
        bsClass="tooltip"
        id="type-tooltip-123"
        placement="right"
      >
        unknown-type
      </Tooltip>
    }
    placement="bottom"
    rootClose={false}
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <ListViewIcon
      className=""
      name="question"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      size="sm"
      type="fa"
    >
      <Icon
        className="list-view-pf-icon-sm"
        name="question"
        onBlur={[Function]}
        onClick={null}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="fa"
      >
        <FontAwesome
          className="list-view-pf-icon-sm"
          name="question"
          onBlur={[Function]}
          onClick={null}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <span
            aria-hidden={true}
            className="fa fa-question list-view-pf-icon-sm"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          />
        </FontAwesome>
      </Icon>
    </ListViewIcon>
  </OverlayTrigger>
</RepositoryTypeIcon>
`;

exports[`RepositoryTypeIcon component rendering it should get rendered correctly when type is provided 1`] = `
<RepositoryTypeIcon
  id={123}
  type="yum"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Tooltip
        bsClass="tooltip"
        id="type-tooltip-123"
        placement="right"
      >
        yum
      </Tooltip>
    }
    placement="bottom"
    rootClose={false}
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <ListViewIcon
      className=""
      name="bundle"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      size="sm"
      type="pf"
    >
      <Icon
        className="list-view-pf-icon-sm"
        name="bundle"
        onBlur={[Function]}
        onClick={null}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="pf"
      >
        <PatternflyIcon
          className="list-view-pf-icon-sm"
          name="bundle"
          onBlur={[Function]}
          onClick={null}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <span
            aria-hidden="true"
            className="pficon pficon-bundle list-view-pf-icon-sm"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          />
        </PatternflyIcon>
      </Icon>
    </ListViewIcon>
  </OverlayTrigger>
</RepositoryTypeIcon>
`;
